app/styles/presale.css
  
  .card {
    background-color: #ffffff;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    width: 100%;
    max-width: 500px;
    margin-bottom: 2rem;
  }
  
  .card-title {
    font-size: 1.5rem;
    font-weight: bold;
    margin-bottom: 1rem;
  }
  
  .card-text {
    font-size: 1rem;
    margin-bottom: 1rem;
  }
 

  h1{
    font-family: 'Space Mono';
  }

  .presaleContent {
    display: flex;
    width: 100%;
    height: 100%;
    flex-direction: column;
    justify-content: center !important;
    text-align: left;
  }
  .presaleContent h2
  {
    text-align: left !important;
    margin: 0 !important;
  }
  .presaleCard
  {
    width: 100%;
    height: 100% !important;
    background-color: var(--background-end);
    text-align: center !important;
    height: 100%;
    border-radius: 40px;
    align-items: center;
    justify-content: center;
    display: flex;
    flex-direction: column !important;
    text-align: center;
    gap: 10px;
    outline: 3px solid var(--faded-accent);
    outline-offset: -3px;
    padding: 50px 0px;
  }

  .presaleContainer {
    display: grid;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    width: 100%;
    color: var(--foreground);
    border-radius: 15px;
    grid-template-columns: 2fr 1fr;
  
    
    }
  

  
  .presaleContent   h2 {
    font-size: 5rem;
    text-align: left !important;
    font-family: 'Space Mono', monospace;
    font-weight: 900;
    letter-spacing: -4px;
    user-select: none;
  }
  
  .presaleContainer p {
    font-size:  2rem;
    letter-spacing: -2px;
    line-height: 40px;
    font-family: 'Inter';
    font-weight: 500;
    user-select: none;
  }
  

  .hero button {
    border-radius: 20px;
    overflow: hidden !important;
  }
.presaleCard button
{
  margin-top: 40px;

}
  .presaleContainer a:hover {
    border-radius: 20px;
    background: none !important;
  }
  .presaleCard input
  {
    padding: 20px 20px;
    margin: 0px auto;
    font-size: 3rem;
    outline: none;
    border: 2px solid #f2003400;
    transition: 0.2s ease;
    max-width: 100%;
    margin: 0 auto;
    text-align: center;
    border-radius: 20px;
    font-weight: 900;
    
  }
  .presaleCard input:focus
  {
    border: 2px solid #f2003450;

  }
.presaleCard p
{
  font-size: 2rem;
  font-family:  'Space Mono', monospace;
  font-weight: 300;
  letter-spacing: -2px;
  margin: 0 auto;
  padding: 0;
  text-align: center;

}
.presaleContent h2
{
  padding: 0;
  margin: 0 auto;
  

}

.presaleCard p span 
{
  font-size: 1.1rem !important;
  font-family: 'Space Mono', Courier, monospace;
  letter-spacing: 1px;
}

.presaleCard p
{
  font-family: 'Space Mono';
  margin: 10px auto;
  padding: 0;
}

input[type="number"] {
  -webkit-appearance: textfield;
     -moz-appearance: textfield;
          appearance: textfield;
}
input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none;
}

.progress-container {
  width: 100%;
  background-color: var(--background-end);
  border-radius: 20px;
  margin: 0px auto;
  margin-top: 30px;
  position: relative;
  outline: 3px solid #f20034;
  outline-offset: -3px !important;  
  overflow: hidden !important;
}

.progress-bar {
  position: relative;
  left: 0;
  top: 0;
  height: 50px;
  background-color:rgba(242.00000077486038, 0, 52.000000700354576, 1);
	background-image:linear-gradient(0deg, rgba(242.00000077486038, 0, 52.000000700354576, 1) 0%,rgba(255, 184.95296269655228, 134.2292109131813, 0.5) 100%) ;
  border-radius: 20px 10px 60px 40px!important;overflow: hidden !important;
}

.progress-container span {
  display: block;
  text-align: center;
  padding: 5px 0;
  font-weight: bold;
  position: absolute;
  width: 100%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}
.center
{
  margin: 0 auto !important;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.contractspan
{
  font-weight: 600 !important;
  padding: 20px;
  background-color: var(--faded-accent);
  width: fit-content;
  border-radius: 20px;
  margin-top: 30px;
  user-select: all;
}
.noSelect
{
  user-select: none;
}

@media only screen and (max-width: 800px)  {

  .contractspan
  {
    font-weight: 600 !important;
    padding: 20px;
    background-color: var(--faded-accent);
    width: fit-content;
    font-size: 0.8rem;
    border-radius: 20px;
    margin-top: 30px !important; 
    user-select: all;
    margin: 0 auto;
  }

  .presaleContainer
  {
    display: flex;
    flex-direction: column;
    width: 100%;
    text-align: center !important;
  }
  
  .presaleContainer h2 {
    font-size: 3rem;
    font-family: 'Space Mono', monospace;
    font-weight: 900 !important;
    text-align: center !important;
  }
  
  .hero .buttonGroup
  {
    height: 100% !important;
    margin-bottom: 50px;
    gap: 20px !important;
    flex-direction: column !important;
  }

  h2 .emojiHeading img
{
  display: inline;
  justify-content: center;
  align-items: center;
  width: 60px !important;
  height: 60px !important;
  margin: 0;
}
h2 .emojiHeading img
{
  aspect-ratio: 1 / 1;
  margin-bottom: -12px !important;
}

.presaleContainer p {
  font-size:  1rem !important;
  margin-top: 20px;
  letter-spacing: 0px !important;
  line-height: 20px !important;
  font-family: 'Inter';
  font-weight: 500;
  text-align: center !important;

}
.footer
{
  width: 80%;
  margin: auto;
}
.buttonGroup
{
  width: 50%;
  flex-direction: column;
  gap: 0px !important;
  margin: 0 auto;
  height: 200px !important;
}

.buttonGroup button
{
  width: 100%;

}

.presaleCardContainer
{
  width: 80%;
  padding: 0;
  margin: 0 auto;
}
.presaleCard
{
  max-width: 100%;
  height: 100% !important;
  background-color: var(--background-end);
  background-color: none !important;
  padding: 20px 20px;
  margin: 0 auto;
  margin-top: 0px;
  text-align: center;
  height: 100%;
  border-radius: 20px !important;
  align-items: center;
  justify-content: center;
  display: flex;
  flex-direction: column !important;
  gap: 10px;
  outline: 3px solid var(--faded-accent);
}

.hero   h2 {
  font-size: 2.5rem !important;
  text-align: center !important;
  line-height: 60px;
  font-family: 'Space Mono', monospace;
  font-weight: 900 !important;

}
.hero p {
  font-size:  1rem !important;
  margin-top: 20px;
  letter-spacing: 0px !important;
  font-family: 'Space Mono';
  font-weight: 500;
  text-align: left !important;
  width: fit-content;
  margin: 20px auto;

}

}

@media only screen and (max-width: 600px) {
  .hero p {
    font-size:  18px !important;
    margin-top: 20px !important;
    letter-spacing: 0px !important;
    font-family: 'Space Mono';
    font-weight: 500;
    text-align: left !important;
    margin: 0 auto;
    width: 100%;
    text-align: center !important;

  }

  .hero   h2 {
    font-size: 2rem !important;
    text-align: center !important;
    line-height: 50px;
    letter-spacing: 0;
    margin: 0 auto;
    font-family: 'Space Mono', monospace;
    font-weight: 900 !important;
    text-align: center;
  
  }
  h2 .emojiHeading img
  {
    margin: 0px -10px;
  }

  .presaleCard
{
  width: 80% !important;
  height: 100% !important;
  background-color: var(--background-end);
  background-color: none !important;
  padding: 20px 20px;
  margin: 0 auto;
  margin-top: 0px;
  text-align: center;
  height: 100%;
  border-radius: 20px !important;
  align-items: center;
  justify-content: center;
  display: flex;
  flex-direction: column !important;
  gap: 10px;
  outline: 3px solid var(--faded-accent);
}
.presaleCard p
{
  padding: 0px !important;
  margin: 0 auto;
}
#input
{
  font-size: large !important;
}

}

